--- a/dash.html
+++ b/dash.html
@@ -25,21 +25,21 @@
                 <div class="timer"></div>
                 <h2 class="ext ext1"></h2>
                 <div class="ext ext2">
-                    <div class="int">
-                        <input type="radio"  name="options">
-                        <label for="abdulKalam"></label>
-                    </div>
+                    <div class="int" >
+                        <input type="radio" name="options">
+                        <label for=""></label>
+                      </div>
                     <div class="int">
                         <input type="radio"   name="options">
-                        <label for="narendraModi"></label>
+                        <label for=""></label>
                     </div>
                     <div class="int">
                         <input type="radio"  name="options">
-                        <label for="swamiVivekananda"></label>
+                        <label for=""></label>
                     </div>
                     <div class="int">
                         <input type="radio"  name="options">
-                        <label for="sardarPatel"></label>
+                        <label for=""></label>
                     </div>
                 </div>
                 <div class="bfoot">
