--- a/dash.html
+++ b/dash.html
@@ -12,7 +12,7 @@
         <div class="container">
             <img class="logo"   src="./assets/menuicon.png" width="40px" height="40px" alt="Logo">
             <div class="left">
-                <h2 class="navhead">Navbar</h2>
+                <h2 class="navhead">Quick-quizz</h2>
             </div>            
             <div class="right">
                 <a href="./index.html">Home</a>
