--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="container">
             <img class="logo"   src="./assets/menuicon.png" width="40px" height="40px" alt="Logo">
             <div class="left">
-                <h2 class="navhead">Navbar</h2>
+                <h2 class="navhead">Quick-quizz</h2>
             </div>            
             <div class="right">
                 <a href="./index.html">Home</a>
@@ -27,17 +27,17 @@
                     <div class="finp">
                         <div class="inpt" >
                             <label for="username">Username</label>
-                            <input type="text">
+                            <input type="text" id="username">
                         </div>
                         <div class="inpt">
                             <label for="pass">Password</label>
-                            <input type="password">
+                            <input type="password" id="password">
                         </div>
                     </div>
                 </form>
                 <div class="loginlast">
                     <button id="Forgotbtn">Forgot Password?</button>
-                    <button   type="submit"><a id="loginbtn" href="./dash.html">Submit</a></button>
+                    <button   type="submit"><a id="loginbtn" href="./dash.html" onclick="inputstore()">Submit</a></button>
                 </div>
             </div>
         </div>
@@ -49,5 +49,5 @@
         </footer>
     </div>
 </body>
-<!-- <script src="./prac.js"></script> -->
+<script src="./prac.js"></script>
 </html>
