--- a/ques.html
+++ b/ques.html
@@ -11,7 +11,7 @@
         <div class="container">
             <img class="logo"   src="./assets/menuicon.png" width="40px" height="40px" alt="Logo">
             <div class="left">
-                <h2 class="navhead">Navbar</h2>
+                <h2 class="navhead">Quick-quizz</h2>
             </div>            
             <div class="right">
                 <a href="./index.html">Home</a>
@@ -22,6 +22,7 @@
         </div>
         <div class="form">
                 <h1>QUIZ COMPLETED</h1>
+                <h2>Score:<span class="score"></span></h2>
         </div>
         <footer class="footer">
             <div class="brandlogo">
@@ -31,5 +32,5 @@
         </footer>
     </div>
 </body>
-<!-- <script src="./prac.js"></script> -->
+<script src="./prac.js"></script>
 </html>
