removed previous and next options

--- a/dash.html
+++ b/dash.html
@@ -1,60 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./app.css">
+    <link rel="stylesheet" href="./app.css" />
     <script src="./prac.js"></script>
-</head>
-<body>
+  </head>
+  <body>
     <div class="order">
-        <div class="container">
-            <img class="logo"   src="./assets/menuicon.png" width="40px" height="40px" alt="Logo">
-            <div class="left">
-                <h2 class="navhead">Quick-quizz</h2>
-            </div>            
-            <div class="right">
-                <a href="./index.html">Home</a>
-                <a>features</a>
-                <a>Services</a>
-                <a>ourwork</a>
-            </div>
+      <div class="container">
+        <img
+          class="logo"
+          src="./assets/menuicon.png"
+          width="40px"
+          height="40px"
+          alt="Logo"
+        />
+        <div class="left">
+          <h2 class="navhead">Quick-quizz</h2>
         </div>
-        <div class="form">
-            <div class="bodyctr">
-                <div class="timer"></div>
-                <h2 class="ext ext1"></h2>
-                <div class="ext ext2" >
-                    <div class="int" >
-                        <input type="radio" name="options">
-                        <label for=""></label>
-                      </div>
-                    <div class="int">
-                        <input type="radio"   name="options">
-                        <label for=""></label>
-                    </div>
-                    <div class="int">
-                        <input type="radio"  name="options">
-                        <label for=""></label>
-                    </div>
-                    <div class="int">
-                        <input type="radio"  name="options">
-                        <label for=""></label>
-                    </div>
-                </div>
-                <div class="bfoot">
-                    <button class="btn1">Previous</button>
-                    <button class="btn2">Next</button>
-                </div>
-            </div>
+        <div class="right">
+          <a href="./index.html">Home</a>
+          <a>features</a>
+          <a>Services</a>
+          <a>ourwork</a>
         </div>
-        <footer class="footer">
-            <div class="brandlogo">
-                <a href="https://www.linkedin.com/in/balu-vamsi/" target="_blank">Contact Us</a>
-                <img class="rboder" src="./assets/linkedinlogo.png" height="30px" weight="30px" alt="linkedinlogo">
+      </div>
+      <div class="form">
+        <div class="bodyctr">
+            <div class="timer"></div>
+            <h2 class="ext ext1"></h2>
+            <div class="ext ext2 ">
+              <!-- <div class="int">
+                <input type="radio" name="options" />
+                <label for=""></label>
+              </div>
+              <div class="int">
+                <input type="radio" name="options" />
+                <label for=""></label>
+              </div>
+              <div class="int">
+                <input type="radio" name="options" />
+                <label for=""></label>
+              </div>
+              <div class="int">
+                <input type="radio" name="options" />
+                <label for=""></label>
+              </div> -->
             </div>
-        </footer>
+          <div class="bfoot"></div>
+        </div>
+      </div>
+      <footer class="footer">
+        <div class="brandlogo">
+          <a href="https://www.linkedin.com/in/balu-vamsi/" target="_blank"
+            >Contact Us</a
+          >
+          <img
+            class="rboder"
+            src="./assets/linkedinlogo.png"
+            height="30px"
+            weight="30px"
+            alt="linkedinlogo"
+          />
+        </div>
+      </footer>
     </div>
-</body>
+  </body>
 </html>
