--- a/ques.html
+++ b/ques.html
@@ -9,16 +9,20 @@
 <body>
     <div class="order">
         <div class="container">
-            <img class="logo"   src="./assets/menuicon.png" width="40px" height="40px" alt="Logo">
-            <div class="left">
-                <h2 class="navhead">Quick-quizz</h2>
-            </div>            
-            <div class="right">
-                <a href="./index.html">Home</a>
-                <a>features</a>
-                <a>Services</a>
-                <a>ourwork</a>
-            </div>
+          <div class="left">
+            <h2 class="navhead">Quick-quizz</h2>
+          </div>
+          <div class="logo">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+          </div>
+          <div class="right">
+            <a href="./index.html">Home</a>
+            <a>features</a>
+            <a>Services</a>
+            <a href="./ques.html">ourwork</a>
+          </div>
         </div>
         <div class="form">
                 <h1>QUIZ COMPLETED</h1>
@@ -31,6 +35,6 @@
             </div>
         </footer>
     </div>
+    <script src="./prac.js"></script>
 </body>
-<script src="./prac.js"></script>
 </html>
