--- a/ques.html
+++ b/ques.html
@@ -1,40 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./app.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./app.css" />
+  </head>
+  <body>
     <div class="order">
-        <div class="container">
-          <div class="left">
-            <h2 class="navhead">Quick-quizz</h2>
-          </div>
-          <div class="logo">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-          </div>
-          <div class="right">
-            <a href="./index.html">Home</a>
-            <a>features</a>
-            <a>Services</a>
-            <a href="./ques.html">ourwork</a>
-          </div>
+      <div class="container">
+        <div class="left">
+          <h2 class="navhead">Quick-quizz</h2>
         </div>
-        <div class="form">
-                <h1>QUIZ COMPLETED</h1>
-                <h2>Score:<span class="score"></span></h2>
+        <div class="logo">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
         </div>
-        <footer class="footer">
-            <div class="brandlogo">
-                <a href="https://www.linkedin.com/in/balu-vamsi/" target="_blank">Contact Us</a>
-                <img class="rboder"  src="./assets/linkedinlogo.png" height="30px" weight="30px" alt="linkedinlogo">
-            </div>
-        </footer>
+        <div class="right">
+          <a href="./index.html">Home</a>
+          <a>features</a>
+          <a>Services</a>
+          <a href="./ques.html">ourwork</a>
+        </div>
+      </div>
+      <div class="form">
+        <h1>QUIZ COMPLETED</h1>
+        <h2>Score:<span class="score"></span></h2>
+      </div>
+      <footer class="footer">
+        <div class="brandlogo">
+          <a href="https://www.linkedin.com/in/balu-vamsi/" target="_blank"
+            >Contact Us</a
+          >
+          <img
+            class="rboder"
+            src="./assets/linkedinlogo.png"
+            height="30px"
+            weight="30px"
+            alt="linkedinlogo"
+          />
+        </div>
+      </footer>
     </div>
     <script src="./prac.js"></script>
-</body>
+  </body>
 </html>
