datainput form change

--- a/quesinput.html
+++ b/quesinput.html
@@ -28,58 +28,58 @@
         <div class="bodyctr">
             <div class="quesinptcontainer">
                 <h3 class="addquesheading">Add Your Questions Below</h3>
-                <div class="eachquestioninp">
+                <div class="eachquestioninp 1">
                     <input type="text" placeholder="Enter Question 1" class="questioninpt">
                     <div class="inpopt">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
-                <div class="eachquestioninp">
+                <div class="eachquestioninp 2">
                     <input type="text" placeholder="Enter Question 2" class="questioninpt">
                     <div class="inpopt">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
-                <div class="eachquestioninp">
+                <div class="eachquestioninp 3">
                     <input type="text" placeholder="Enter Question 3" class="questioninpt">
                     <div class="inpopt">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
-                <div class="eachquestioninp">
+                <div class="eachquestioninp 4">
                     <input type="text" placeholder="Enter Question 4" class="questioninpt">
                     <div class="inpopt">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
-                <div class="eachquestioninp">
+                <div class="eachquestioninp 5">
                     <input type="text" placeholder="Enter Question 5" class="questioninpt">
                     <div class="inpopt">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
-                <div class="eachquestioninp">
+                <div class="eachquestioninp 6">
                     <input type="text" placeholder="Enter Question 6" class="questioninpt">
                     <div class="inpopt">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
                 <div class="eachquestioninp">
@@ -88,7 +88,7 @@
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
                 <div class="eachquestioninp">
@@ -97,7 +97,7 @@
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
                 <div class="eachquestioninp">
@@ -106,7 +106,7 @@
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
                 <div class="eachquestioninp">
@@ -115,12 +115,12 @@
                         <input type="text" class="eachoptioninp" placeholder="Enter the option1">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option2">
                         <input type="text" class="eachoptioninp" placeholder="Enter the option3">
-                        <input type="text" class="eachoptioninp" placeholder="Enter the option4">
+                        <input type="text" class="eachoptioninp" placeholder="Enter the correct option">
                     </div>
                 </div>
             </div>
             <div class="formsubmit">
-                <button class="btnsubmit">Submit</button>
+                <button class="btnsubmit" onclick="addquestiontodb()">Submit</button>
             </div>
         </div>
       </div>
